--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         }
     ],
     "require": {
-        "mono-repo-1/repo1": "dev-main",
-        "mono-repo-1/repo2": "dev-main"
+        "mono-repo-1/repo1": "v0.2.0",
+        "mono-repo-1/repo2": "v0.2.0"
     }
 }
